# mcp-gateway

./: .gitignore  .requirements.txt.swp  Dockerfile  Makefile  README.md  Staj_Proqrami_Nizamnamesi.docx  create_doc.js  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: api_keys.json  upstreams.json
deploy/k8s/: deployment.yml  hpa.yml  ingress.yml  namespace.yml  pdb.yml  service.yml
docs/: ARCHITECTURE.md
monitoring/grafana/dashboards/: gateway.json
monitoring/prometheus/: prometheus.yml
scripts/: dev-setup.sh
src/: __init__.py  main.py
src/agents/: routes.py
src/core/: app.py  config.py  state.py
src/middleware/: circuit_breaker.py  logging_mw.py  rate_limiter.py
src/observability/: health.py  telemetry.py
src/protocol/: mcp_types.py  validator.py
src/routing/: mcp_router.py  proxy.py
src/security/: agent_registry.py  auth.py
tests/integration/: test_gateway.py
tests/unit/: test_circuit_breaker.py  test_protocol.py
